# analisis_precios_minoristas_UADE

./: .gitignore  CLAUDE.md  CLAUDE_memoria_chat.md  PARA_MANANA.md  README.md  pyproject.toml  requirements.txt
.claude/: MEMORY.md  settings.json
.claude/skills/barrios-caba/: SKILL.md
.claude/skills/data-quality-auditor/: SKILL.md
.claude/skills/informe-mensual/: SKILL.md
.claude/skills/si-extract/: SKILL.md
.claude/skills/si-promote/: SKILL.md
.claude/skills/si-remember/: SKILL.md
.claude/skills/si-review/: SKILL.md
.claude/skills/statistical-analyst/: SKILL.md
.github/workflows/: actualizar_manifest.yml  publicar_mapa.yml  validar_codigo.yml  validar_manifest.yml
data/: drive_manifest.json
data/masters/: README.md
docs/: configurar_github_actions.md
notebooks/: 01_universo_productos.ipynb  02_canasta_diaria.ipynb  03_mapa_sucursales.ipynb  04_evolucion_semestral.ipynb  05_consolidacion_ipc.ipynb  MAPA_MES_COMPLETO.ipynb
overleaf/: README.md  bibliografia.bib.txt  main.tex.txt
scripts/: actualizar_manifest.py  agente_interactivo.py  consolidar_series.py  procesar_semestral.py
src/sepa/: __init__.py
src/sepa/agents/: __init__.py  memory.py  orchestrator.py  tools.py
src/sepa/analysis/: __init__.py  basket.py  chains.py  timeseries.py
src/sepa/config/: __init__.py  cadenas.py  canasta.py  geo.py  settings.py
src/sepa/pipeline/: __init__.py  aggregator.py  cleaner.py  enricher.py  loader.py
src/sepa/viz/: __init__.py  charts.py  exports.py  maps.py
